Novos arquivos html e css

--- a/index.html
+++ b/index.html
@@ -3,17 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/icons/favicon.png">
     <link rel="stylesheet" href="./styles/index.css">
     <title>E-commerce</title>
 </head>
 <body>
-    <h1>Projeto Final - Entrega parcial</h1><br>
-    
-    <h2>E-Commerce</h2><br>
-
-    <h2>Daniel Sousa</h2>
-    <h2>Douglas Farias</h2><br>
-
-    <script src="./scripts/index.js"></script>
+    <header>
+        <nav>
+            <span><a href="./index.html">Home</a></span>
+            <ul class="navLoja">
+                <li><a href="./assets/pages/loja-categoria-a.html">Categoria A</a></li>
+                <li><a href="./assets/pages/loja-categoria-b.html">Categoria B</a></li>
+            </ul>
+            <ul class="navUsuario">
+                <li><a href="./assets/pages/cadastro-usuario.html">Login</a></li>
+                <li><a href="./assets/pages/carrinho.html">Carrinho</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="titulo">
+            <h1>E-commerce</h1>
+            <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+        </section>
+        <section id="loja">
+            <div><a href="./assets/pages/loja-categoria-a.html">Categoria A</a></div>
+            <div><a href="./assets/pages/loja-categoria-b.html">Categoria B</a></div>
+        </section>
+        <section id="ofertas">
+            <h2>Ofertas</h2>
+        </section>
+    </main>
+    <footer>
+        <h5>contato@ecommerce.com</h5>
+    </footer>
+    <!-- <script src="./scripts/index.js"></script> -->
 </body>
 </html>
