implementação do html e css da homepage

--- a/assets/pages/cadastro-usuario.html
+++ b/assets/pages/cadastro-usuario.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/icons/favicon.png">
     <link rel="stylesheet" href="../../styles/cadastro-usuario.css">
-    <title>Ec - Cadastre-se</title>
+    <title>EC - Cadastre-se</title>
 </head>
 <body>
     
