--- a/assets/pages/carrinho.html
+++ b/assets/pages/carrinho.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/icons/favicon.png">
     <link rel="stylesheet" href="../../styles/carrinho.css">
-    <title>Ec - Carrinho</title>
+    <title>EC - Carrinho</title>
 </head>
 <body>
     
