--- a/assets/pages/loja-todas-categorias.html
+++ b/assets/pages/loja-todas-categorias.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/icons/favicon.png">
     <link rel="stylesheet" href="../../styles/loja-categorias.css">
-    <title>Ec - Categoria B</title>
+    <title>EC - Categorias</title>
 </head>
 <body>
     
