--- a/assets/pages/loja-todas-categorias.html
+++ b/assets/pages/loja-todas-categorias.html
@@ -8,6 +8,24 @@
     <title>EC - Categorias</title>
 </head>
 <body>
-    
+    <header class="menu-sup">
+        <nav>
+            <div class="menu-sup__home"><a href="./index.html">E_COMMERCE</a></div>
+            <ul class="menu-sup__loja">
+                <li><a href="./assets/pages/loja-todas-categorias.html">Todas as categorias</a></li>
+            </ul>
+            <ul class="menu-sup__usuario">
+                <li><a href="./assets/pages/cadastro-usuario.html">Login</a></li>
+                <li><a href="./assets/pages/carrinho.html">Carrinho</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="conteudo">
+        
+    </main>
+    <footer>
+        <h5>contato@ecommerce.com</h5>
+    </footer>
+    <script defer src="../../scripts/loja-todas-categorias.js"></script>
 </body>
 </html>
