--- a/assets/pages/cadastro-usuario.html
+++ b/assets/pages/cadastro-usuario.html
@@ -13,13 +13,13 @@
 <body>
     <header class="menu-sup">
         <nav>
-            <div class="menu-sup__home"><a href="./index.html">E_COMMERCE</a></div>
+            <div class="menu-sup__home"><a href="../../index.html">E_COMMERCE</a></div>
             <ul class="menu-sup__loja">
                 <li><a href="./assets/pages/loja-todas-categorias.html">Todas as categorias</a></li>
             </ul>
             <ul class="menu-sup__usuario">
-                <li><a href="./assets/pages/cadastro-usuario.html">Login</a></li>
-                <li><a href="./assets/pages/carrinho.html">Carrinho</a></li>
+                <li><a href="cadastro-usuario.html">Login</a></li>
+                <li><a href="carrinho.html">Carrinho</a></li>
             </ul>
         </nav>
     </header>
