--- a/assets/pages/carrinho.html
+++ b/assets/pages/carrinho.html
@@ -6,22 +6,101 @@
     <link rel="shortcut icon" href="./assets/icons/favicon.png">
     <link rel="stylesheet" href="../../styles/carrinho.css">
     <title>EC - Carrinho</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+    </style>
 </head>
 <body>
     <header class="menu-sup">
         <nav>
-            <div class="menu-sup__home"><a href="./index.html">E_COMMERCE</a></div>
+            <div class="menu-sup__home"><a href="../../index.html">E_COMMERCE</a></div>
             <ul class="menu-sup__loja">
                 <li><a href="./assets/pages/loja-todas-categorias.html">Todas as categorias</a></li>
             </ul>
             <ul class="menu-sup__usuario">
-                <li><a href="./assets/pages/cadastro-usuario.html">Login</a></li>
-                <li><a href="./assets/pages/carrinho.html">Carrinho</a></li>
+                <li><a href="cadastro-usuario.html">Login</a></li>
+                <li><a href="carrinho.html">Carrinho</a></li>
             </ul>
         </nav>
     </header>
     <main class="conteudo">
+        <section class="conteudo__lista">
+            <div class="conteudo__item">
 
+                <div class="item__imagem">
+                    <img src="" alt="">
+                </div>
+
+                <div>
+                    <h3 class="item__nome">Produto 1</h3>
+                    <h3 class="item__preco">R$ 0,00</h3>
+                </div>
+
+                <div class="item__quantidade">
+                    <button id="quantidade__menos">-</button>
+                    <h4 id="quantidade__valor">1</h4>
+                    <button id="quantidade__mais">+</button>
+                    <button id="quantidade__deletar">Remover</button>
+                </div>
+
+                <div>
+                    <h3 class="item_subtotal">R$ 0,00</h3>
+                </div>
+
+            </div>
+        </section>
+        <section class="conteudo__frete">
+            <div>
+                <h4>Endereço de entrega:</h4>
+                <span id="usuarioEndereco"></span>
+            </div>
+            <div>
+                <form>
+                    <h4>Escolha a opção de frete:</h4>
+                    <table>
+                        <tr>
+                            <th></th>
+                            <th>Envio</th>
+                            <th>Prazo</th>
+                            <th>Preço</th>
+                        </tr>
+                            <td><input type="radio" name="opcaoFrete" value="fretePadrao"></td>
+                            <td>Padrão</td>
+                            <td>10 a 15 dias úteis</td>
+                            <td>R$ 0,00</td>
+                        <tr>
+                            <td><input type="radio" name="opcaoFrete" value="freteExpresso"></td>
+                            <td>Expresso</td>
+                            <td>3 a 5 dias úteis</td>
+                            <td>R$ 0,00</td>
+                        </tr>
+                    </table>
+                </form>
+            </div>
+        </section>
+        <section class="conteudo__resumo">
+            <div>
+                <h2>Total</h2>
+                <table class="resumo__somaValores">
+                    <tr>
+                        <td id="somaValores__itens">Subtotal</td>
+                        <td id="somaValores__valorItens"></td>
+                    </tr>
+                    <tr>
+                        <td id="somaValores__frete"></td>
+                        <td id="somaValores__valorFrete"></td>
+                    </tr>
+                    <tr>
+                        <td id="somaValores__desconto">Desconto</td>
+                        <td id="somaValores__valorDesconto">R$ 0,00</td>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <button id="finalizarCompra">Finalizar Compra</button>
+                <button id="limparCarrinho">Limpar Carrinho</button>
+            </div>
+        </section>
     </main>
     <footer>
         <h5>contato@ecommerce.com</h5>
