--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         <nav>
             <div class="menu-sup__home"><a href="./index.html">E_COMMERCE</a></div>
             <ul class="menu-sup__loja">
-                <li><a href="./assets/pages/loja-todas-categorias.html">Todas as categorias</a></li>
+                <li>
+                    <input type="text">
+                    <button id="menu-sup__busca">Procurar</button>
+                </li>
             </ul>
             <ul class="menu-sup__usuario">
                 <li><a href="./assets/pages/cadastro-usuario.html">Login</a></li>
@@ -29,18 +32,44 @@
             <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
         </section>
         <section id="conteudo__loja">
-            <div id="conteudo__loja-categoriaa"><a href="./assets/pages/loja-categoria-a.html">CATEGORIA A</a></div>
-            <div id="conteudo__loja-categoriab"><a href="./assets/pages/loja-categoria-b.html">CATEGORIA B</a></div>
+            <div id="conteudo__loja-categoriaa"><a href="./assets/pages/loja-todas-categorias.html">CATEGORIA A</a></div>
+            <div id="conteudo__loja-categoriab"><a href="./assets/pages/loja-todas-categorias.html">CATEGORIA B</a></div>
         </section>
         <section id="conteudo__ofertas">
             <div>
                 <h2>OFERTAS</h2>
             </div>
         </section>
+        <section class="conteudo__vitrine">
+            <div class="vitrine__categorias">
+                <a href="vitrine.html?categoria=categoriaA">
+                    <!-- <img src="img/categoriaA.jpg" alt="Categoria A"> -->
+                    <h2>Categoria A</h2>
+                </a>
+            </div>
+            <div class="vitrine__categorias">
+                <a href="vitrine.html?categoria=categoriaB">
+                    <!-- <img src="img/categoriaB.jpg" alt="Categoria B"> -->
+                    <h2>Categoria B</h2>
+                </a>
+            </div>
+            <div class="vitrine__categorias">
+                <a href="vitrine.html?categoria=categoriaC">
+                    <!-- <img src="img/categoriaC.jpg" alt="Categoria C"> -->
+                    <h2>Categoria C</h2>
+                </a>
+            </div>
+            <div class="vitrine__categorias">
+                <a href="vitrine.html?categoria=categoriaD">
+                    <!-- <img src="img/categoriaD.jpg" alt="Categoria D"> -->
+                    <h2>Categoria D</h2>
+                </a>
+            </div>
+        </section>
     </main>
     <footer>
         <h5>contato@ecommerce.com</h5>
     </footer>
-    <script defer src="./scripts/index.js"></script>
+    <!-- <script defer src="./scripts/index.js"></script> -->
 </body>
 </html>
