Atualização dos arquivos js

--- a/index.html
+++ b/index.html
@@ -27,41 +27,39 @@
         </nav>
     </header>
     <main class="conteudo">
-        <section id="conteudo__titulo">
-            <h1>OS MELHORES PRODUTOS</h1><br>
-            <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
-        </section>
-        <section id="conteudo__loja">
-            <div id="conteudo__loja-categoriaa"><a href="./assets/pages/loja-todas-categorias.html">CATEGORIA A</a></div>
-            <div id="conteudo__loja-categoriab"><a href="./assets/pages/loja-todas-categorias.html">CATEGORIA B</a></div>
-        </section>
-        <section id="conteudo__ofertas">
-            <div>
-                <h2>OFERTAS</h2>
-            </div>
+        <section class="conteudo__topo">
+            <section id="topo__titulo">
+                <h1>OS MELHORES PRODUTOS</h1><br>
+                <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+            </section>
+            <section id="topo__loja">
+                <div id="topo__novidades"><a href="./assets/pages/vitrine.html?filtro=novidade">NOVIDADES</a></div>
+                <div id="topo__ofertasTodas"><a href="./assets/pages/vitrine.html?filtro=oferta">TODAS AS OFERTAS</a></div>
+            </section>
+            <section id="topo__ofertasAlgumas">
+                <div>
+                    <h2>MELHORES OFERTAS</h2>
+                </div>
+            </section>
         </section>
         <section class="conteudo__vitrine">
             <div class="vitrine__categorias">
-                <a href="vitrine.html?categoria=categoriaA">
-                    <!-- <img src="img/categoriaA.jpg" alt="Categoria A"> -->
+                <a href="./assets/pages/vitrine.html?categoria=categoriaA">
                     <h2>Categoria A</h2>
                 </a>
             </div>
             <div class="vitrine__categorias">
-                <a href="vitrine.html?categoria=categoriaB">
-                    <!-- <img src="img/categoriaB.jpg" alt="Categoria B"> -->
+                <a href="./assets/pages/vitrine.html?categoria=categoriaB">
                     <h2>Categoria B</h2>
                 </a>
             </div>
             <div class="vitrine__categorias">
-                <a href="vitrine.html?categoria=categoriaC">
-                    <!-- <img src="img/categoriaC.jpg" alt="Categoria C"> -->
+                <a href="./assets/pages/vitrine.html?categoria=categoriaC">
                     <h2>Categoria C</h2>
                 </a>
             </div>
             <div class="vitrine__categorias">
-                <a href="vitrine.html?categoria=categoriaD">
-                    <!-- <img src="img/categoriaD.jpg" alt="Categoria D"> -->
+                <a href="./assets/pages/vitrine.html?categoria=categoriaD">
                     <h2>Categoria D</h2>
                 </a>
             </div>
