--- a/assets/pages/vitrine.html
+++ b/assets/pages/vitrine.html
@@ -56,6 +56,7 @@
     <footer>
         <h5>contato@ecommerce.com</h5>
     </footer>
+    <script defer src="../../scripts/listaProdutos.js"></script>
     <script defer src="../../scripts/vitrine.js"></script>
 </body>
 </html>
