atualizacao dos scripts index, vitrine e listaProdutos

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
             </section>
             <section id="topo__loja">
-                <div id="topo__novidades"><a href="./assets/pages/vitrine.html?filtro=novidade">NOVIDADES</a></div>
-                <div id="topo__ofertasTodas"><a href="./assets/pages/vitrine.html?filtro=oferta">TODAS AS OFERTAS</a></div>
+                <div id="topo__novidades"><a href="./assets/pages/vitrine.html?filtro=novidades">NOVIDADES</a></div>
+                <div id="topo__ofertas"><a href="./assets/pages/vitrine.html?filtro=ofertas">TODAS AS OFERTAS</a></div>
             </section>
-            <section id="topo__ofertasAlgumas">
+            <section id="topo__feed">
                 <div>
                     <h2>MELHORES OFERTAS</h2>
                 </div>
@@ -68,6 +68,6 @@
     <footer>
         <h5>contato@ecommerce.com</h5>
     </footer>
-    <!-- <script defer src="./scripts/index.js"></script> -->
+    <script defer type="module" src="./scripts/index.js"></script>
 </body>
 </html>
