--- a/assets/pages/vitrine.html
+++ b/assets/pages/vitrine.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/icons/favicon.png">
-    <link rel="stylesheet" href="../../styles/loja-categorias.css">
+    <link rel="stylesheet" href="../../styles/vitrine.css">
     <title>EC - Categorias</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@@ -25,11 +25,12 @@
     </header>
     <main class="conteudo">
         <section class="conteudo__cabecalho">
-            <div class="conteudo__categorias"></div>
-            <div class="conteudo__titulo"> </div>
-            <div class="conteudo__ofertas"></div>
+            <div id="conteudo__categorias"></div>
+            <div id="conteudo__titulo"></div>
+            <div id="conteudo__ofertas"></div>
         </section>
-        <!-- <section class="conteudo__filtro">
+        <!-- IMPLEMENTAÇÃO FUTURA
+            <section class="conteudo__filtro">
             <form>
                 <span>Ordenar por</span>
                 <select name="ordenarPor" id="">
@@ -41,7 +42,7 @@
             </form>
         </section> -->
         <section class="conteudo__vitrine">
-            <!-- Div de produto -->
+            <!-- MODELO HTMO DA DIV PADRÃO DOS PRODUTOS
             <div class="conteudo__produto" id="produto__0000">
                 <a href="">
                     <img src="" alt="">
@@ -51,12 +52,12 @@
                     <span>R$ 0,00</span>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
     <footer>
         <h5>contato@ecommerce.com</h5>
     </footer>
-    <script defer src="../../scripts/listaProdutos.js"></script>
-    <script defer src="../../scripts/vitrine.js"></script>
+    <script defer type="module" src="../../scripts/listaProdutos.js"></script>
+    <script defer type="module" src="../../scripts/vitrine.js"></script>
 </body>
 </html>
