Script da pagina produtos

--- a/assets/pages/vitrine.html
+++ b/assets/pages/vitrine.html
@@ -44,8 +44,8 @@
         <section class="conteudo__vitrine">
             <!-- MODELO HTMO DA DIV PADRÃO DOS PRODUTOS
             <div class="conteudo__produto" id="produto__0000">
-                <a href="">
-                    <img src="" alt="">
+                <a href="produto.html?id=0000>
+                    <img src="../images/produto08.jpg" alt="Descrição da imagem">
                 </a>
                 <div>
                     <h4>Produto 0</h4>
