--- a/assets/pages/produto.html
+++ b/assets/pages/produto.html
@@ -25,6 +25,7 @@
     </header>
     <main class="conteudo">
         <section class="conteudo__imagens">
+            <!-- MODELO DA DIV DAS IMAGENS DO ITEM
             <div class="imagens__produto">
                 <img src="" alt="">
             </div>
@@ -32,13 +33,12 @@
                 <img src="" alt="">
                 <img src="" alt="">
                 <img src="" alt="">
-            </div>
+            </div> -->
         </section>
         <section class="conteudo__infos">
+            <!-- MODELO DA DIV DAS INFORMAÇÕES DO ITEM
             <div class="infos__principal">
                 <span>
-                    <h5>Vitrine</h5>
-                    <h5> | </h5>
                     <h5>Categoria</h5>
                 </span>
                 <h1 id="infos__nome">Produto 1</h1>
@@ -53,7 +53,7 @@
             <div class="infos_botoes">
                 <button class="botoes__comprarAgora">Comprar Agora</button>
                 <button class="botoes__adicionarCarrinho">Adicionar ao Carrinho</button>
-            </div>
+            </div> -->
         </section>
     </main>
     <footer>
