ativacao da funcao renderizarItem

--- a/assets/pages/produto.html
+++ b/assets/pages/produto.html
@@ -59,6 +59,6 @@
     <footer>
         <h5>contato@ecommerce.com</h5>
     </footer>
-    <script defer src="../../scripts/produto.js"></script>
+    <script defer type="module" src="../../scripts/produto.js"></script>
 </body>
 </html>
