--- a/assets/pages/vitrine.html
+++ b/assets/pages/vitrine.html
@@ -42,13 +42,13 @@
             </form>
         </section> -->
         <section class="conteudo__vitrine">
-            <!-- MODELO HTMO DA DIV PADRÃO DOS PRODUTOS
+            <!-- MODELO DA DIV DOS PRODUTOS
             <div class="conteudo__produto" id="produto__0000">
                 <a href="produto.html?id=0000>
                     <img src="../images/produto08.jpg" alt="Descrição da imagem">
                 </a>
                 <div>
-                    <h4>Produto 0</h4>
+                    <h4>Produto 00</h4>
                     <span>R$ 0,00</span>
                 </div>
             </div>
