Resolução do bug no botão subtrair1

--- a/assets/pages/produto.html
+++ b/assets/pages/produto.html
@@ -44,16 +44,19 @@
                 <h1 id="infos__nome">Produto 1</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi sit numquam totam, fuga aliquam consequatur.</p>
                 <h1 id="infos__preco"> R$ 0,00</h1>
-            </div>
-            <div class="infos__quantidade">
-                <button id="quantidade__menos">-</button>
-                <h4 id="quantidade__valor">1</h4>
-                <button id="quantidade__mais">+</button>
-            </div>
-            <div class="infos_botoes">
-                <button class="botoes__comprarAgora">Comprar Agora</button>
-                <button class="botoes__adicionarCarrinho">Adicionar ao Carrinho</button>
             </div> -->
+        </section>
+        <section class="conteudo__botoes">
+            <div class="botoes_quantidade">
+                <button id="quantidade__subtrair1" disabled>-</button>
+                <span id="quantidade__qtde">1</span>
+                <button id="quantidade__somar1">+</button>
+            </div>
+            <div class="botoes__envio">
+                <h2 id="envio__subtotal"></h2>
+                <button id="envio__comprarAgora">Comprar Agora</button>
+                <button id="envio__adicionarCarrinho">Adicionar ao Carrinho</button>
+            </div>
         </section>
     </main>
     <footer>
