Botao adicionar ao carrinho

--- a/assets/pages/carrinho.html
+++ b/assets/pages/carrinho.html
@@ -24,6 +24,11 @@
         </nav>
     </header>
     <main class="conteudo">
+
+        <section class="conteudo__carrinhoVazio">
+            <h2>Ainda não há produtos no seu carrinho.</h2>
+        </section>
+
         <section class="conteudo__lista">
             <div class="conteudo__item">
 
