--- a/assets/pages/produto.html
+++ b/assets/pages/produto.html
@@ -54,7 +54,7 @@
             </div>
             <div class="botoes__envio">
                 <h2 id="envio__subtotal"></h2>
-                <button id="envio__comprarAgora">Comprar Agora</button>
+                <!-- <button id="envio__comprarAgora">Comprar Agora</button> -->
                 <button id="envio__adicionarCarrinho">Adicionar ao Carrinho</button>
             </div>
         </section>
