atualizacao HTML carrinho

--- a/assets/pages/carrinho.html
+++ b/assets/pages/carrinho.html
@@ -24,14 +24,13 @@
         </nav>
     </header>
     <main class="conteudo">
+        <section class="conteudo__lista">   
+            <div id="lista__carrinhoVazio">
+                <h2>Ainda não há produtos no seu carrinho.</h2>
+            </div>
 
-        <section class="conteudo__carrinhoVazio">
-            <h2>Ainda não há produtos no seu carrinho.</h2>
-        </section>
-
-        <section class="conteudo__lista">
             <div class="conteudo__item">
-
+                <!-- MODELO DA DIV PARA CADA ITEM DA LISTA
                 <div class="item__imagem">
                     <img src="" alt="">
                 </div>
@@ -50,7 +49,7 @@
 
                 <div>
                     <h3 class="item_subtotal">R$ 0,00</h3>
-                </div>
+                </div> -->
 
             </div>
         </section>
