--- a/assets/pages/cadastro-usuario.html
+++ b/assets/pages/cadastro-usuario.html
@@ -28,7 +28,7 @@
             <div>
                 <input type="text" placeholder="Nome">
                 <input type="text" placeholder="Sobrenome">
-                <form>
+                <!-- <form>
                     <span>Gênero</span>
                     <select name="genero" id="">
                         <option value="masculino">Masculino</option>
@@ -36,7 +36,7 @@
                         <option value="outros">Outros</option>
                         <option value="prefiroNaoInforma">Prefiro não informar</option>
                     </select>
-                </form>
+                </form> -->
             </div><br>
             <div>
                 <input type="text" placeholder="CEP">
