pagina, js do cadastro

--- a/assets/pages/carrinho.html
+++ b/assets/pages/carrinho.html
@@ -18,7 +18,7 @@
                 <li><a href="./assets/pages/loja-todas-categorias.html">Todas as categorias</a></li>
             </ul>
             <ul class="menu-sup__usuario">
-                <li><a href="cadastro-usuario.html">Login</a></li>
+                <li><a href="cadastro.html">Login</a></li>
                 <li><a href="carrinho.html">Carrinho</a></li>
             </ul>
         </nav>
