--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </li>
             </ul>
             <ul class="menu-sup__usuario">
-                <li><a href="./assets/pages/cadastro-usuario.html">Login</a></li>
+                <li><a href="./assets/pages/cadastro.html">Login</a></li>
                 <li><a href="./assets/pages/carrinho.html">Carrinho</a></li>
             </ul>
         </nav>
