--- a/assets/pages/produto.html
+++ b/assets/pages/produto.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/icons/favicon.png">
     <link rel="stylesheet" href="../../styles/produto.css">
-    <title>EC - Produto 1</title>
+    <title id="tituloHead"></title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
@@ -18,7 +18,7 @@
                 <li><a href="./assets/pages/loja-todas-categorias.html">Todas as categorias</a></li>
             </ul>
             <ul class="menu-sup__usuario">
-                <li><a href="cadastro-usuario.html">Login</a></li>
+                <li><a href="cadastro.html">Login</a></li>
                 <li><a href="carrinho.html">Carrinho</a></li>
             </ul>
         </nav>
