--- a/assets/pages/cadastro.html
+++ b/assets/pages/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./assets/icons/favicon.png">
+    <link rel="shortcut icon" href="../icons/favicon.png">
     <link rel="stylesheet" href="../../styles/cadastro-usuario.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@@ -24,30 +24,30 @@
         </nav>
     </header>
     <main class="conteudo">
-        <form class="conteudo__formulario">
+        <form class="conteudo__formulario" id="formulario__formulario">
             <div>
-                <label for="formulario_nome">Nome</label>
-                <input type="text" id="formulario_nome" placeholder="Nome" required>
-                <label for="formulario_sobrenome">Sobrenome</label>
-                <input type="text" id="formulario_sobrenomenome" placeholder="Sobrenome" required>
-            </div>
-            <div>
-                <label for="formulario_cep">CEP</label>
-                <input type="text" id="formulario_cep" placeholder="00000-000" required>
-                <label for="formulario_endereço">Endereço</label>
-                <input type="text" id="formulario_endereco" placeholder="Endereço (Logradouro, Número)" required>
-            </div>
-            <div><label for="formulario_email">Email</label>
-                <input type="text" id="formulario_email" placeholder="Endereço de email" required>
+                <label for="formulario__nome">Nome*</label>
+                <input type="text" id="formulario__nome" placeholder="Nome" required>
+                <label for="formulario__sobrenome">Sobrenome*</label>
+                <input type="text" id="formulario__sobrenomenome" placeholder="Sobrenome" required>
             </div>
             <div>
-                <label for="formulario_senha">Senha</label>
-                <input type="password" id="formulario_senha" placeholder="Senha" required>
-                <label for="confirmarSenha">Repita a senha</label>
-                <input type="password" id="formulario_confirmarSenha" placeholder="Senha" required>
-                <h6 id="alertaRepetirSenha"></h6>
+                <label for="formulario__cep">CEP*</label>
+                <input type="text" id="formulario__cep" placeholder="00000-000" required>
+                <label for="formulario__endereco">Endereço*</label>
+                <input type="text" id="formulario__endereco" placeholder="Endereço (Logradouro, Número)" required>
             </div>
-            <button type="submit" id="formulario_botaoCadastrar" disabled>Cadastrar</button>
+            <div><label for="formulario__email">Email*</label>
+                <input type="text" id="formulario__email" placeholder="Endereço de email" required>
+            </div>
+            <div>
+                <label for="formulario__senha">Senha*</label>
+                <input type="password" id="formulario__senha" placeholder="Senha" required>
+                <label for="formulario__confirmarSenha">Repita a senha*</label>
+                <input type="password" id="formulario__confirmarSenha" placeholder="Senha" required>
+                <h6 id="formulario__alertaSenha"></h6>
+            </div>
+            <button type="submit" id="formulario__botaoCadastrar" disabled>Cadastrar</button>
         </form>
     </main>
     <footer>
