--- a/assets/pages/carrinho.html
+++ b/assets/pages/carrinho.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./assets/icons/favicon.png">
+    <link rel="shortcut icon" href="../icons/favicon.png">
     <link rel="stylesheet" href="../../styles/carrinho.css">
     <title>EC - Carrinho</title>
     <style>
