--- a/index.html
+++ b/index.html
@@ -42,27 +42,30 @@
                 </div>
             </section>
         </section>
+        <div class="vitrine__titulo">
+            <h1>CONFIRA NOSSOS PRODUTOS</h1>
+        </div>
         <section class="conteudo__vitrine">
-            <div class="vitrine__categorias">
-                <a href="./assets/pages/vitrine.html?categoria=categoriaA">
+            <a href="./assets/pages/vitrine.html?categoria=categoriaA">
+                <div class="vitrine__categorias">                
                     <h2>Categoria A</h2>
-                </a>
-            </div>
-            <div class="vitrine__categorias">
-                <a href="./assets/pages/vitrine.html?categoria=categoriaB">
+                </div>                
+            </a>   
+            <a href="./assets/pages/vitrine.html?categoria=categoriaB">
+                <div class="vitrine__categorias">                
                     <h2>Categoria B</h2>
-                </a>
-            </div>
-            <div class="vitrine__categorias">
-                <a href="./assets/pages/vitrine.html?categoria=categoriaC">
+                </div>                
+            </a>   
+            <a href="./assets/pages/vitrine.html?categoria=categoriaC">
+                <div class="vitrine__categorias">                
                     <h2>Categoria C</h2>
-                </a>
-            </div>
-            <div class="vitrine__categorias">
-                <a href="./assets/pages/vitrine.html?categoria=categoriaD">
+                </div>                
+            </a>            
+            <a href="./assets/pages/vitrine.html?categoria=categoriaD">
+                <div class="vitrine__categorias">                
                     <h2>Categoria D</h2>
-                </a>
-            </div>
+                </div>                
+            </a>   
         </section>
     </main>
     <footer>
