--- a/assets/pages/produto.html
+++ b/assets/pages/produto.html
@@ -24,19 +24,19 @@
         </nav>
     </header>
     <main class="conteudo">
-        <section class="conteudo__imagens">
-            <!-- MODELO DA DIV DAS IMAGENS DO ITEM
-            <div class="imagens__produto">
+    <!-- <section class="conteudo__imagens">
+            MODELO DA DIV DAS IMAGENS DO ITEM
+            <div id="imagens__produto">
                 <img src="" alt="">
             </div>
             <div class="imagens__relacionados">
                 <img src="" alt="">
                 <img src="" alt="">
                 <img src="" alt="">
-            </div> -->
+            </div>
         </section>
         <section class="conteudo__infos">
-            <!-- MODELO DA DIV DAS INFORMAÇÕES DO ITEM
+            MODELO DA DIV DAS INFORMAÇÕES DO ITEM
             <div class="infos__principal">
                 <span>
                     <h5>Categoria</h5>
@@ -44,17 +44,16 @@
                 <h1 id="infos__nome">Produto 1</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi sit numquam totam, fuga aliquam consequatur.</p>
                 <h1 id="infos__preco"> R$ 0,00</h1>
-            </div> -->
-        </section>
+            </div>
+        </section> -->
         <section class="conteudo__botoes">
-            <div class="botoes_quantidade">
+            <div class="botoes__quantidade">
                 <button id="quantidade__subtrair1" disabled>-</button>
                 <span id="quantidade__qtde">1</span>
                 <button id="quantidade__somar1">+</button>
             </div>
+            <h2 id="envio__subtotal"></h2>
             <div class="botoes__envio">
-                <h2 id="envio__subtotal"></h2>
-                <!-- <button id="envio__comprarAgora">Comprar Agora</button> -->
                 <button id="envio__adicionarCarrinho">Adicionar ao Carrinho</button>
             </div>
         </section>
