deletar arquivos desktop.ini

--- a/assets/pages/carrinho.html
+++ b/assets/pages/carrinho.html
@@ -24,6 +24,7 @@
         </nav>
     </header>
     <main class="conteudo">
+        <h1 class="conteudo__titulo">CARRINHO</h1>
         <section class="conteudo__lista">   
             <div id="lista__carrinhoVazio">
                 <h2>Ainda não há produtos no seu carrinho.</h2>
@@ -120,8 +121,8 @@
                 </table>
             </div>
             <div>
-                <button id="finalizarCompra">Finalizar Compra</button>
                 <button id="limparCarrinho">Limpar Carrinho</button>
+                <button id="finalizarCompra">Finalizar Compra</button>
             </div>
         </section>
     </main>
