--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
                 <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
             </section>
             <section id="topo__loja">
-                <div id="topo__novidades"><a href="./assets/pages/vitrine.html?filtro=novidades">NOVIDADES</a></div>
-                <div id="topo__ofertas"><a href="./assets/pages/vitrine.html?filtro=ofertas">TODAS AS OFERTAS</a></div>
+                <a href="./assets/pages/vitrine.html?filtro=novidades">
+                    <div id="topo__novidades">NOVIDADES</div>
+                </a>
+                <a href="./assets/pages/vitrine.html?filtro=ofertas">
+                    <div id="topo__ofertas">TODAS AS OFERTAS</div>
+                </a>
             </section>
             <section id="topo__feed">
                 <div>
