--- a/assets/pages/carrinho.html
+++ b/assets/pages/carrinho.html
@@ -76,7 +76,7 @@
         </section>
         <section class="conteudo__resumo">
             <div>
-                <h2>Resumo da compra</h2>
+                <h2>TOTAIS</h2>
                 <table class="resumo__somaValores">
                     <tr>
                         <td id="somaValores__itens">Subtotal</td>
